# jngl

./: .atom-build.json  .clang-format  .clang-tidy  .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yml  Achievement_8hpp.html  Achievement_8hpp.js  Achievement_8hpp__dep__incl.map  Achievement_8hpp__dep__incl.md5  Achievement_8hpp__incl.map  Achievement_8hpp__incl.md5  Achievement_8hpp_source.html  Alpha_8hpp.html  Alpha_8hpp__dep__incl.map  Alpha_8hpp__dep__incl.md5  Alpha_8hpp__incl.map  Alpha_8hpp__incl.md5  Alpha_8hpp_source.html  AppParameters_8hpp.html  AppParameters_8hpp.js  AppParameters_8hpp__dep__incl.dot  AppParameters_8hpp__dep__incl.map  AppParameters_8hpp__dep__incl.md5  AppParameters_8hpp__incl.dot  AppParameters_8hpp__incl.map  AppParameters_8hpp__incl.md5  AppParameters_8hpp_source.html  App_8hpp.html  App_8hpp.js  App_8hpp__dep__incl.dot  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.dot  App_8hpp__incl.map  App_8hpp__incl.md5  (+939 more)
.github/: ci.py
.github/workflows/: android.yml  documentation.yml  gh-pages.yml  ios.yml  linux.yml  macos.yml  main.yml  python.yml  windows.yml
JNGL/JNGL.xcodeproj/: project.pbxproj
_includes/: bottom.html  top.html
android/: .gitignore  Makefile  build.sh
android/include/: pnglibconf.h
android/jngl/: AndroidManifest.xml
android/test/: .gitignore  .project  AndroidManifest.xml  build.gradle  gradle.properties
android/test/app/src/main/cpp/: CMakeLists.txt  bootstrap.cpp  main.cpp
autopackage/: default.apspec.in
cmake/: CPM.cmake  FindVorbisFile.cmake  FindWebP.cmake  iOS.toolchain.cmake  spirv_to_header.py  tvOS.toolchain.cmake
cmake/asan/: CMakeLists.txt
configs/: clang.config  debug.config  release.config
css/: standard.css
data/: blur.frag  fade.frag  run-clang-tidy.py  texture.vert  textured.frag  verysmall.ogv  xorg.conf
data/ios/: jngl-test.in.plist
doc/: .gitignore  CMakeLists.txt  Controller_8cpp_source.html  Controller_8hpp_source.html  Doxyfile  DoxygenLayout.xml  Finally_8cpp_source.html  Finally_8hpp_source.html  ShaderProgram_8cpp_source.html  ShaderProgram_8hpp_source.html  Shader_8cpp_source.html  Shader_8hpp_source.html  Vec2_8cpp_source.html  Vec2_8hpp.html  Vec2_8hpp__dep__incl.map  Vec2_8hpp__dep__incl.md5  Vec2_8hpp__incl.map  Vec2_8hpp__incl.md5  Vec2_8hpp_source.html  Vertex_8hpp_source.html  Video_8cpp_source.html  Video_8hpp_source.html  all_8hpp.html  all_8hpp__dep__incl.map  all_8hpp__dep__incl.md5  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  classes.html  classjngl_1_1Color-members.html  classjngl_1_1Color.html  classjngl_1_1Controller-members.html  classjngl_1_1Controller.html  classjngl_1_1Drawable-members.html  classjngl_1_1Drawable.html  classjngl_1_1Drawable__inherit__graph.map  classjngl_1_1Drawable__inherit__graph.md5  classjngl_1_1Finally-members.html  classjngl_1_1Finally.html  (+124 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_3.js  all_4.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  classes_1.js  classes_6.js  enums_0.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
examples/: audioplayer.cpp  videoplayer.cpp
examples/bike/: SConstruct  base.cpp  base.hpp  bike.cpp  bike.hpp  constants.hpp  line.cpp  line.hpp  main.cpp  vector2d.hpp  wheel.cpp  wheel.hpp
examples/shader/: main.cpp
examples/throw/: main.cpp
glad/src/: gl.c  wgl.c
include/: .gitignore  XInput.h
include/vorbis/: vorbisfile.h
installer/: jngl.nsh  mingw.nsi.in  msvc.nsi.in  python.nsi.in
ios/: JNGLView.h  JNGLView.mm  glew.h  time.cpp  window.cpp  windowimpl.cpp  windowimpl.hpp
jngl/: finally.cpp  install.sh  jngl.nsi.in  main.cpp  test.cpp  texture.cpp  window.cpp  window.hpp
jngl/autopackage/: default.apspec.in
jngl/examples/: font.cpp
jngl/linux/: time.cpp  window.cpp
jngl/win32/: time.cpp  window.cpp
lib/: freetype.lib  libogg_static.lib  libpng.lib  libvorbis_static.lib  libwebp.lib  libwebp_debug.lib  ogg.lib  png.lib  vorbisfile.lib  z.lib  zlib.lib
lib/msvc/: epoxy.lib  libpng15.lib  libwebp.lib  ogg.lib  vorbis.lib  vorbisfile.lib  zlib.lib
linux/: message.cpp  time.cpp  window.cpp
python/: .gitignore  boost_python-mgw44-1_41.lib  jnal.cpp  libboost_python-mgw34-1_39.lib  libboost_python-mgw44-1_45.lib  main.cpp  setup.py
sdl/: message.cpp  sdl.cpp  sdl.hpp  time.cpp  window.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  (+102 more)
src/: AchievementLayer.cpp  AchievementLayer.hpp  App.cpp  App.hpp  ConvertUTF.c  FontImpl.hpp  ImageDataPNG.cpp  ImageDataPNG.hpp  ImageDataWebP.cpp  ImageDataWebP.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp  Renderer.hpp  ShaderCache.cpp  ShaderCache.hpp  Shader_Impl.hpp  Sound.cpp  Sound.hpp  SoundFile.cpp  SoundFile.hpp  SoundParams.hpp  StartupProfiler.hpp  TextureCache.cpp  TextureCache.hpp  audio.cpp  audio.hpp  callbacks.c  callbacks.h  draw.hpp  finally.cpp  finally.hpp  framebufferimpl.cpp  framebufferimpl.hpp  freetype.cpp  freetype.hpp  helper.cpp  helper.hpp  jngl.hpp  log.cpp  (+19 more)
src/android/: AndroidController.cpp  AndroidController.hpp  androidController.cpp  androidController.hpp  fopen.cpp  fopen.hpp  glew.h  haptics.cpp  input.cpp  message.cpp  other.cpp  time.cpp  window.cpp  windowimpl.cpp  windowimpl.hpp
src/audio/: Stream.hpp  Track.hpp  channel.hpp  constants.hpp  duplicate.cpp  (+20 more)
tests/: performance.cpp
visualcpp/: JNGL.sln  jngl.vcxproj  jngl.vcxproj.filters  packages.config
win32/: openal.hpp  window.cpp  windowimpl.cpp
wiz/: libogl.h  message.cpp  test.cpp  time.cpp  window.cpp  wizGLES.h
(+351 files in other folders)
